Sec56_Chap488-XXX: corrected the business logic of listBeers()